# Agentic-Workflow-for-Automated-Binary-Analysis

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cmds.txt  docker-compose.yml  list_gemini_models.py  main.py  notes.txt  pyproject.toml  sketch.ipynb  start.sh  test.c
agents/: __init__.py  orchestrator.py
core/: __init__.py  models.py  report_generator.py  utils.py
docs/: presentation.tex  project_plan.tex  technical_report.tex
plan/: project_plan.tex
reports/: fake_malware_report.json  fake_malware_report.md  mock_report.json  mock_report.md
samples/: fake_malware  fake_malware.c  mock  mock.c  test
tests/: test_report_generator.py  test_tools_smoke.py  test_unpacking.py  test_utils.py
tools/: __init__.py  crypto_detector.py  metadata_extractor.py  obfuscation_detector.py  string_analyzer.py  syscall_analyzer.py
