[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-binary-analysis"
version = "0.1.0"
description = "Agentic workflow for automated PE/ELF binary analysis"
requires-python = ">=3.11"

dependencies = [
  "agno[google]",
  "fastmcp",
  "pefile",
  "pyelftools",
  "lief",
  "google-generativeai",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[project.scripts]
binary-analysis = "main:main"

[tool.setuptools]
packages = ["agents", "core", "tools"]
py-modules = ["main", "list_gemini_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
